// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  USER
  ADMIN
}

enum OrderStatus {
  PENDING
  CONFIRMED
  SHIPPING
  COMPLETED
  CANCELLED
}

enum PaymentProvider {
  COD
  MOMO
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

model User {
  id           String     @id @default(cuid())
  name         String?
  email        String     @unique
  passwordHash String     @map("password_hash")
  role         Role       @default(USER)
  sessions     Session[]
  cartItems    CartItem[]
  orders       Order[]
  createdAt    DateTime   @default(now()) @map("created_at")
  updatedAt    DateTime   @updatedAt @map("updated_at")

  @@map("users")
}

model Session {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  tokenHash String   @unique @map("token_hash")
  expiresAt DateTime @map("expires_at")
  createdAt DateTime @default(now()) @map("created_at")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model Product {
  id         String      @id @default(cuid())
  name       String
  slug       String      @unique
  brand      String
  price      Decimal     @db.Decimal(12, 2)
  imageUrl   String?     @map("image_url")
  cpu        String?
  ram        String?
  storage    String?
  gpu        String?
  screen     String?
  stock      Int         @default(0)
  isActive   Boolean     @default(true) @map("is_active")
  cartItems  CartItem[]
  orderItems OrderItem[]
  createdAt  DateTime    @default(now()) @map("created_at")
  updatedAt  DateTime    @updatedAt @map("updated_at")

  @@map("products")
}

model CartItem {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  productId String   @map("product_id")
  quantity  Int      @default(1)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([userId, productId])
  @@map("cart_items")
}

model Order {
  id            String        @id @default(cuid())
  userId        String        @map("user_id")
  status        OrderStatus   @default(PENDING)
  paymentStatus PaymentStatus @default(PENDING) @map("payment_status")
  totalAmount   Decimal       @map("total_amount") @db.Decimal(12, 2)
  customerName  String        @map("customer_name")
  phone         String
  address       String
  note          String?
  createdAt     DateTime      @default(now()) @map("created_at")
  updatedAt     DateTime      @updatedAt @map("updated_at")

  user     User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  item     OrderItem[]
  payments Payment[]

  @@map("orders")
}

model OrderItem {
  id        String   @id @default(cuid())
  orderId   String   @map("order_id")
  productId String   @map("product_id")
  quantity  Int
  unitPrice Decimal  @map("unit_price") @db.Decimal(12, 2)
  createdAt DateTime @default(now()) @map("created_at")

  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@map("order_items")
}

model Payment {
  id                    String          @id @default(cuid())
  orderId               String          @map("order_id")
  provider              PaymentProvider
  status                PaymentStatus   @default(PENDING)
  amount                Decimal         @db.Decimal(12, 2)
  providerRequestId     String          @unique @map("provider_request_id")
  providerTransactionId String?         @map("provider_transaction_id")
  payUrl                String?         @map("pay_url")
  rawResponse           Json?           @map("raw_response")
  paidAt                DateTime?       @map("paid_at")
  createdAt             DateTime        @default(now()) @map("created_at")
  updatedAt             DateTime        @updatedAt @map("updated_at")

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@map("payments")
}
