Enum Role {
  USER
  ADMIN
}

Enum OrderStatus {
  PENDING
  CONFIRMED
  SHIPPING
  COMPLETED
  CANCELLED
}

Enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

Enum payment_provider {
  COD
  MOMO
}

Table users {
  id varchar [pk]
  name varchar
  email varchar [unique, not null]
  password_hash varchar [not null]
  role Role [not null, default: 'USER']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table sessions {
  id varchar [pk]
  user_id varchar [not null]
  token_hash varchar [unique, not null]
  expires_at timestamp [not null]
  created_at timestamp [not null]
}

Table products {
  id varchar [pk]
  name varchar [not null]
  slug varchar [unique, not null]
  brand varchar [not null]
  price decimal [not null]
  image_url varchar
  cpu varchar
  ram varchar
  storage varchar
  gpu varchar
  screen varchar
  stock int [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table cart_items {
  id varchar [pk]
  user_id varchar [not null]
  product_id varchar [not null]
  quantity int [not null, default: 1]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (user_id, product_id) [unique]
  }
}

Table orders {
  id varchar [pk]
  user_id varchar [not null]
  status OrderStatus [not null, default: 'PENDING']
  payment_status PaymentStatus [not null, default: 'PENDING']
  total_amount decimal [not null]
  customer_name varchar [not null]
  phone varchar [not null]
  address text [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table order_items {
  id varchar [pk]
  order_id varchar [not null]
  product_id varchar [not null]
  quantity int [not null]
  unit_price decimal [not null]
  created_at timestamp [not null]
}

Table payments {
  id varchar [pk]
  order_id varchar [not null]
  provider payment_provider [not null]
  status payment_status [not null, default: 'PENDING']
  amount decimal(12,2) [not null]
  provider_request_id varchar [not null, unique]
  provider_transaction_id varchar
  pay_url text
  raw_response json
  paid_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]
}



Ref: sessions.user_id > users.id [delete: cascade]
Ref: cart_items.user_id > users.id [delete: cascade]
Ref: cart_items.product_id > products.id [delete: cascade]
Ref: orders.user_id > users.id [delete: cascade]
Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.product_id > products.id [delete: restrict]
Ref: payments.order_id > orders.id